package net;

// 结果码	
enum RESULT_CODE
{
	RESULT_CODE_FAIL 			= 0; // 失败
	RESULT_CODE_SUCCESS			= 1; // 成功
	RESULT_CODE_NOVIP			= 2; // 目标非VIP或自身非VIP不能赠送
	RESULT_CODE_CION_ERROR  	= 3; // 财富币金额错误
	RESULT_CODE_PASSWD_ERROR	= 4; // 密码错误
	RESULT_CODE_NEED_INLOBBY	= 5; // 必须在大厅中操作
	RESULT_CODE_REPEAT_GET		= 6; // 重复领取
	RESULT_CODE_NOT_COND		= 7; // 不满足条件
	RESULT_CODE_ERROR_PARAM		= 8; // 参数错误
	RESULT_CODE_NOT_TABLE		= 9; // 桌子不存在
	RESULT_CODE_NOT_OWER		= 10;// 不属于你的
	RESULT_CODE_BLACKLIST		= 11;// 黑名单
	RESULT_CODE_NOT_DIAMOND		= 12;// 钻石不足
	RESULT_CODE_ERROR_PLAYERID	= 13;// 错误的玩家ID
	RESULT_CODE_TABLE_FULL		= 14;// 桌子已满
	RESULT_CODE_GAMEING			= 15;// 游戏中不能操作
	RESULT_CODE_ERROR_STATE		= 16;// 错误状态
	RESULT_CODE_LOGIN_OTHER		= 17;// 别处登录
	RESULT_CODE_SVR_REPAIR		= 18;// 服务器维护
	RESULT_CODE_CDING			= 19;// cd冷却中
	RESULT_CODE_IP_LIMIT		= 20;// IP地址限制
	
}

//  任务类型
enum MISSION_TYPE
{
	MISSION_TYPE_PLAY  		= 101; // 游戏对局	
	MISSION_TYPE_WIN   		= 102; // 游戏胜
	MISSION_TYPE_KILL  		= 103; // 猎杀
	MISSION_TYPE_PRESS 		= 104; // 压制
	MISSION_TYPE_FEEWIN 	= 105; // 抽水赢
	MISSION_TYPE_FEELOSE	= 106; // 抽水输
	MISSION_TYPE_PLAY_FINISH    = 201;
	MISSION_TYPE_PLAY_WIN	    = 202;
	MISSION_TYPE_PLAY_BRANKER   = 203;
	MISSION_TYPE_PLAY_BRANKER_WIN  = 204;
	MISSION_TYPE_PLAY_JETTON    = 251;
	MISSION_TYPE_PLAY_SING_WIN  = 252;
	MISSION_TYPE_PLAY_STAT_WIN  = 253;
	MISSION_TYPE_MAXVALUE  = 300;
}
// 任务循环类型
enum MISSION_CYCLE_TYPE
{
	MISSION_CYCLE_TYPE_DAY  	= 1; // 日循环
	MISSION_CYCLE_TYPE_WEEK 	= 2; // 周循环
	MISSION_CYCLE_TYPE_MONTH 	= 3; // 月循环
	
}
// 领奖标记
enum REWARD_FLAG
{
	REWARD_CLOGIN	=  1;// 连续登陆奖励
	REWARD_WLOGIN3	=  2;// 本周累计3天奖励
	REWARD_WLOGIN5	=  3;// 本周累计5天奖励
	REWARD_WLOGIN6	=  4;// 本周累计6天奖励

}

// 游戏类型
enum GAME_CATE_TYPE
{
	GAME_CATE_LOBBY  				= 0; 		// 大厅服务器
	GAME_CATE_LAND  				= 1; 		// 斗地主
	GAME_CATE_SHOWHAND 				= 2;		// 梭哈	
	GAME_CATE_BULLFIGHT				= 3;		// 斗牛
	GAME_CATE_TEXAS 				= 4;		// 德州
	GAME_CATE_ZAJINHUA				= 5;		// 扎金花
	GAME_CATE_NIUNIU				= 6;		// 牛牛
	GAME_CATE_BACCARAT				= 7;		// 百家乐
	GAME_CATE_SANGONG				= 8;		// 三公
	GAME_CATE_PAIJIU				= 9;		// 牌九
	GAME_CATE_EVERYCOLOR			= 10;		// 时时彩
	GAME_CATE_DICE					= 11;		// 骰宝
	GAME_CATE_TWO_PEOPLE_MAJIANG	= 12;		// 二人麻将
	GAME_CATE_FRUIT_MACHINE			= 13;		// 水果机
	GAME_CATE_WAR					= 14;		// 红黑大战
	GAME_CATE_FIGHT					= 15;		// 龙虎斗
	GAME_CATE_ROBNIU				= 16;		// 看牌抢庄牛牛
	GAME_CATE_FISHING				= 17;		// 捕鱼
	GAME_CATE_TWOEIGHT				= 18;		// 二八杠
	GAME_CATE_CARCITY				= 19;		// 奔驰宝马
	GAME_CATE_MAX_TYPE				= 20;		// 最大类型
}
enum GAME_SUB_TYPE
{
	GAME_SUB_COMMON			= 1;		// 普通场
	GAME_SUB_MATCH			= 2;		// 比赛场
	GAME_SUB_PRIVATE		= 3;		// 私人房
}

// 兑换类型
enum EXCHANGE_TYPE
{
	EXCHANGE_TYPE_SCORE	= 1;// 兑换积分
	EXCHANGE_TYPE_COIN	= 2;// 兑换财富币
}

// 房间消费类型
enum ROOM_CONSUME_TYPE
{
	ROOM_CONSUME_TYPE_SCORE = 1; // 积分场
	ROOM_CONSUME_TYPE_COIN	= 2; // 财富币
}
// 房间发牌类型
enum ROOM_DEAL_TYPE
{
	ROOM_DEAL_TYPE_SOLO   = 1; // 单张发牌
	ROOM_DEAL_TYPE_THREE  = 2; // 3-4-5-5发牌
	ROOM_DEAL_TYPE_SEVEN  = 3; // 7-10发牌	
}
// 桌子台费类型
enum TABLE_FEE_TYPE
{
	TABLE_FEE_TYPE_NO		= 0; // 不收费
	TABLE_FEE_TYPE_ALLBASE	= 1; // 每人收取底分百分百服务费
	TABLE_FEE_TYPE_WIN		= 2; // 抽取赢家百分百
}
// 桌子状态
enum TABLE_STATE
{
	TABLE_STATE_FREE 		= 1; // 等待开始
	TABLE_STATE_CALL 		= 2; // 叫分状态
	TABLE_STATE_PLAY 		= 3; // 游戏进行
	TABLE_STATE_WAIT 		= 4; // 等待状态	
	TABLE_STATE_GAME_END    = 5; // 游戏结算状态
}


enum TABLE_STATE_DICE
{
	TABLE_STATE_DICE_FREE 			= 1; // 等待开始
	TABLE_STATE_DICE_PLACE_JETTON	= 2; // 下注状态
	TABLE_STATE_DICE_GAME_END		= 3; // 结束状态
}

enum TABLE_STATE_WAR
{
	TABLE_STATE_WAR_FREE 			= 1; // 等待开始
	TABLE_STATE_WAR_PLACE_JETTON	= 2; // 下注状态
	TABLE_STATE_WAR_GAME_END		= 3; // 游戏结算状态
}


enum TABLE_STATE_FIGHT
{
	TABLE_STATE_FIGHT_FREE 			= 1; // 等待开始
	TABLE_STATE_FIGHT_PLACE_JETTON	= 2; // 下注状态
	TABLE_STATE_FIGHT_GAME_END		= 3; // 游戏结算状态
}

enum TABLE_STATE_ROBNIU
{
	TABLE_STATE_ROBNIU_FREE 				= 1; // 等待开始
	TABLE_STATE_ROBNIU_READY_START			= 2; // 准备开始
	TABLE_STATE_ROBNIU_GAME_START			= 3; // 开始状态
	TABLE_STATE_ROBNIU_FOUR_SHOW_CARD		= 4; // 发牌状态
	TABLE_STATE_ROBNIU_APPLY_BRANKER		= 5; // 抢庄状态
	TABLE_STATE_ROBNIU_MAKE_BRANKER			= 6; // 抢庄状态
	TABLE_STATE_ROBNIU_PLACE_JETTON			= 7; // 下注状态
	TABLE_STATE_ROBNIU_LAST_SHOW_CARD		= 8; // 发牌状态
	TABLE_STATE_ROBNIU_CHANGE_CARD			= 9; // 摆牌状态
	TABLE_STATE_ROBNIU_GAME_END				= 10; // 结束状态
}

enum TABLE_STATE_NIUNIU
{
	TABLE_STATE_NIUNIU_FREE 		= 1; // 等待开始
	TABLE_STATE_NIUNIU_PLACE_JETTON	= 2; // 下注状态
	TABLE_STATE_NIUNIU_GAME_END		= 3; // 结束状态
}

enum TABLE_STATE_APBNIU
{
	TABLE_STATE_APBNIU_FREE 				= 1; // 等待开始
	TABLE_STATE_APBNIU_READY_START			= 2; // 准备开始
	TABLE_STATE_APBNIU_GAME_START			= 3; // 开始状态
	TABLE_STATE_APBNIU_APPLY_BRANKER		= 4; // 抢庄状态
	TABLE_STATE_APBNIU_MAKE_BRANKER			= 5; // 抢庄状态
	TABLE_STATE_APBNIU_PLACE_JETTON			= 6; // 下注状态
	TABLE_STATE_APBNIU_SEND_CARD			= 7; // 发牌状态
	TABLE_STATE_APBNIU_CHANGE_CARD			= 8; // 摆牌状态
	TABLE_STATE_APBNIU_GAME_END				= 9; // 结束状态
}

enum TABLE_STATE_ZAJINHUA
{
	TABLE_STATE_ZAJINHUA_FREE 		 = 1; // 等待开始
	TABLE_STATE_ZAJINHUA_READY_START = 2; // 准备开始
	TABLE_STATE_ZAJINHUA_PLAY 		 = 3; // 游戏进行
	TABLE_STATE_ZAJINHUA_WAIT 		 = 4; // 等待状态
	TABLE_STATE_ZAJINHUA_GAME_END    = 5; // 结算状态
}

enum TABLE_STATE_FISHING
{
	TABLE_STATE_FISHING_START 		 = 1; // 开始
	TABLE_STATE_FISHING_PAUSE		 = 2; // 暂停	
}

enum TABLE_STATE_TWOEIGHT
{
	TABLE_STATE_TWOEIGHT_FREE 		  = 1; // 等待开始
	TABLE_STATE_TWOEIGHT_PLACE_JETTON = 2; // 下注状态
	TABLE_STATE_TWOEIGHT_GAME_END	  = 3; // 结束状态
}

enum TABLE_STATE_CARCITY
{
	TABLE_STATE_CARCITY_FREE 		 = 1; // 等待开始
	TABLE_STATE_CARCITY_PLACE_JETTON = 2; // 下注状态
}